# AgentNow

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: __init__.py  agent_conversation.py  agent_generated_file.py  agent_operation_log.py  agent_template.py  agent_template_version.py  department.py  enterprise.py  knowledge_config.py  knowledge_doc.py  knowledge_doc_chunk.py  permission.py  role.py  role_permission.py  user.py  user_agent.py  user_role.py
backend/app/routers/: __init__.py  agent.py  agent_template.py  auth.py  department.py  employee.py  hermes.py  knowledge.py  permission.py  role.py  super_assistant.py
backend/app/schemas/: __init__.py  agent.py  agent_template.py  department.py  enterprise.py  hermes.py  knowledge.py  permission.py  role.py  super_assistant.py  user.py
backend/app/services/: __init__.py  agent_service.py  agent_template_service.py  auth_service.py  hermes_chat_service.py  hermes_profile_service.py  hermes_service.py  hermes_sync_service.py  knowledge_config_service.py  knowledge_retrieval_service.py  knowledge_service.py  ppt_assistant_interaction_service.py  ppt_content_renderer.py  super_assistant_service.py
backend/app/skills/ppt_assistant/: SKILL.md
backend/app/utils/: __init__.py  file_handler.py
backend/data/: database.sql  init_agent_templates.sql  migrate_agent_menu_20260430.sql  migrate_menu_display_names_20260430.sql
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
md/: AGENT_API_SPEC.md  AGENT_GLOSSARY.md  AGENT_IMPLEMENTATION_SPEC.md  AGENT_IMPLEMENTATION_TASKS.md  AGENT_PPT_ASSISTANT_TEMPLATE_V1.md  HERMES_INFO_DISPLAY_DESIGN.md  HERMES_MANAGEMENT_DESIGN.md  HERMES_WEBUI_对AgentNow的借鉴与集成方案.md  HERMES_WEBUI_项目研究.md  Hermes.md  KNOWLEDGE_BASE_DESIGN.md  KNOWLEDGE_CONFIG_GUIDE.md  SPEC.md  init.md
(+49 files in other folders)
