[project]
name = "agentnow-backend"
version = "0.1.0"
description = "智现 AgentNow 企业智能体平台 - 后端服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.4.30",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.0",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app/", "data/", "*.md", "*.toml", ".env.example"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.envs.default]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.4.30",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "alembic>=1.13.0",
    "python-pptx>=0.6.23",
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
